<?xml version="1.0"?>
<package format="2">
  <name>schunk_ft_sensor</name>
  <version>0.0.0</version>
  <description>The schunk_ft_sensor package</description>

  <maintainer email="turan.elchuev@ipa.fraunhofer.de">Turan Elchuev</maintainer>

  <license>IPA</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>socketcan_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
  </export>
</package>
